--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '2'
 services:
   snake:
-    image: 'amrit96/snake'
+    image: 'ravi7206/snake'
     environment:
       - "PORT:3000"
     ports:
-      - "80:3000"
+      - "3000:3000"
     volumes:
       - ./:/app
