--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   snake:
-    image: 'ravi7206/snake'
+    image: 'ravikumar7206/snake'
     environment:
       - "PORT:3000"
     ports:
